syntax = "proto3";

package user.v1;

option go_package = "api/user/v1;userv1";

import "buf/validate/validate.proto";
import "user/v1/models/token.proto";

message RefreshTokenRequest {
  string refresh_token = 1;
}

message RefreshTokenResponse {
  Tokens tokens = 1;
}
